# Distri-Inference-Sidecar

./: .gitignore  Dockerfile  README.md  README.zh-CN.md  buf.gen.yaml  docker-compose.yaml  go.mod  go.sum  grafana-dashboard.json  prometheus.yml
cmd/sidecar/: main.go
internal/batcher/: batcher.go
internal/grpcserver/: server.go
internal/metrics/: metrics.go
internal/tokenizer/: tokenizer.go
internal/vramguard/: vramguard.go
proto/: inference.proto
python_backend/: Dockerfile  main.py  pyproject.toml  test.py  test_main.py
python_backend/benchmark/: tokenizer_bench.py
python_model/: main.py  pyproject.toml
rust_ops/: Cargo.toml  tokenizer.h
rust_ops/src/: bpe_token.rs  lib.rs
