[project]
name = "python-backend"
version = "0.1.0"
description = "Mock FastAPI inference backend for local development and integration testing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "ruff>=0.15.7",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.42.0",
]
