[package]
name = "rust_ops"
version = "0.1.0"
edition = "2024"

[lib]
# Compile as a C-compatible static library so it can be linked into Go (via
# CGo) or any other C-compatible consumer.
name = "rust_ops"
crate-type = ["cdylib","staticlib"]

[features]
default = []
python = ["dep:pyo3"]

[dependencies]
pyo3 = { version = "0.22", optional = true, features = ["extension-module"] }
